--- a/news-app/src/components/Navbar.module.css
+++ b/news-app/src/components/Navbar.module.css
@@ -1,7 +1,10 @@
 .container{
   width: 100%;
-margin-bottom: 20px;
-  border-bottom: 2px solid gray;
+  height: 50px;
+margin-bottom: 10px;
+
+  background-color: teal;
+  color: white;
 }
 .main {
   width: 80%;
